# restllm

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
locust/: locust_test.py
locust/data/: chat_post.json  completion_parameters_post.json  message_post.json  prompt_post.json  prompt_template_post.json
src/restllm/: cli.py  dependencies.py  exceptions.py  main.py  middleware.py  settings.py
src/restllm/cryptography/: authentication.py  keys.py  secure_url.py
src/restllm/endpoints/: __init__.py  authentication.py  completion.py  crud.py
src/restllm/models/: __init__.py  authentication.py  base.py  chat.py  completion.py  events.py  functions.py  prompts.py  share.py  validators.py
src/restllm/redis/: commands.py  events.py  index.py  keys.py  queries.py  ratelimit.py  search.py
src/restllm/routers/: authentication.py  chats.py  completion.py  completion_parameters.py  events.py  functions.py  messages.py  prompts.py  share.py  users.py
src/restllm/tasks/: email.py
src/restllm/types/: paths.py  queries.py
tests/unittests/: test_cryptography.py  test_model_authentication.py  test_model_prompts.py
